# ocp_tutorials

./: .rosinstall  CMakeLists.txt  README.md  package.xml
config/: config.rviz
launch/: crocoddyl_tennis.launch  robotoc_gait.launch  robotoc_jump.launch  simple_biped_gait.launch  viewer_test.launch
src/: crocoddyl_tennis.cpp  robotoc_gait.cpp  robotoc_jump.cpp  simple_biped_gait.cpp  viewer_test.cpp  whole_body_manipulation.cpp
