<?xml version="1.0"?>
<package format="2">
  <name>ocp_tutorials</name>
  <version>0.0.0</version>
  <description>The ocp_tutorials package </description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>crocoddyl</depend>
  <depend>tf</depend>

</package>
